--- a/public/style.css
+++ b/public/style.css
@@ -1,42 +1,34 @@
 @charset "utf-8";
 /* CSS Document */
 
-body{ width:100%; text-align:center; background:#000000; margin:0; font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 12px; line-height:20px;}
-html{ width:100%; text-align:center; background:#000000; margin:0;}
+body{ width:100%; height:auto; background:#FFF; background:url(images/bg.jpg) repeat-x top; margin:0; padding:0;}
 
+#warp{ width:960px; height:auto; margin:0 auto;}
+.head{ height:305px;}
+.head-left{ width:180px; height:159px; background:url(images/baner2.jpg) no-repeat 0 70px; float:left;}
+.head-right{ width:532px; height:159px;  float:left; background:url(images/bannrt.jpg) no-repeat top;}
+.head-bottom{ padding-left:350px; margin:0; width:362px;}
+.head-bottom ul{ margin:0; padding:0; list-style:none; font-family:Verdana, arial, Geneva, sans-serif; font-size:11px; color:#778890; line-height:20px;}
+.head-bottom ul li{margin:0; padding-left:20px;padding-bottom:10px; background:url(images/dian.png) no-repeat 5px 6px;}
 
-#warp{ width:960px; background:#fff4de; margin:0 auto;}
-.New{ width:133px; height:170px; position:absolute; z-index:100; text-align:left; margin:0; background: url(images/new.jpg)}
-#Head{ width:960px; height:600px;}
-.HeadLeft{ width:274px; height:600px; margin-left:70px; float:left; text-align:left}
-.HeadLeftTop{ width:220px;text-align:center;}
-.HeadLeftTop h1{ font-family: Verdana, Geneva, sans-serif; font-size:20px; color:#9c4d23; margin:0; padding:0; line-height:18px;}
-.HeadLeftTop h2{ font-family: Georgia,Verdana, Arial,Helvetica, sans-serif; font-size:50px;color:#000; font-weight:lighter; margin-top:20px; padding:0;}
-.HeadLeftCenter{ width:274px; font-family:Verdana, Arial,Helvetica, sans-serif; font-size:11px; color:#000; text-align:left; line-height:20px;}
-.HeadLeftBottom{ widows:230px; height:85px; margin-top:10px;}
-.HeadCenter{ width:296px;float:left; height:600px;}
-.HeadLeftCenter p{ margin:10px 0 20px 0; padding:0;}
-.HeadRight{ width:256px; height:600px; margin-right:44px; float:left;}
-.HeadRightTop{ width:188px; height:136px; margin:83px 0 24px 0; background:url(images/2_04.jpg) no-repeat; padding:22px 13px 18px 55px; text-align:left;}
-.HeadRightTop p{ font-family:Georgia,Verdana, Arial,Helvetica, sans-serif; font-size:16px; color:#fff4de; margin:0; padding:0;}
-.HeadRightCenter{ width:211px; margin:0; margin-left:45px; text-align:left;}
-.HeadRightCenter h3{margin:0; font-family: Myriad Pro,Verdana, Arial,Helvetica, sans-serif; font-size:24px; color:#d9914a; font-weight:lighter;}
-.ProOverview{width:211px; margin:0 0 0 45px; float:left;}
-.HeadRightBottom img { width:91px; height:91px; margin-right:14px; margin-top:15px; float:left;}
+.content{ margin:0; padding:72px 70px 40px 56px; width:834px; height:auto;}
+.content-left{ float:left; width:328px; margin-right:40px;}
+.content-left-top{ background:url(images/ip.jpg) no-repeat top; height:588px;}
+.content-left-bottom{ background:url(images/text.jpg) no-repeat top; height:140px; padding:20px 45px 30px 88px;}
+.content-left-bottom p{ margin:0; padding-bottom:10px; font-family: Georgia, verdana, Times, serif; font-size:17px; color:#bdbdbd; line-height:24px; font-style:italic;}
+.content-left-bottom span{ margin:0; padding-right:5px; font-family: Georgia, verdana, Times, serif; font-size:14px; color:#ffeed8;  font-style:italic; text-align:right; display:block;}
 
-#Contect{ width:815px; margin:0 73px 30px 72px; height:240px; text-align:left;}
-h4{margin:0; font-family: Myriad Pro,Verdana, Arial,Helvetica, sans-serif; font-size:32px; color:#d9914a;}
-.ContectLeft{ width:380px; margin-right:60px; float:left;}
-.ContectLeft ul{margin:10px 0 0 0; padding:0; list-style:none;  font-family:Verdana, Geneva, sans-serif; font-size:12px; color:#a65d39; }
-.ContectLeft ul li{ margin-bottom:20px; background:url(images/dian.jpg) no-repeat 0 7px; padding-left:14px;}
-.ContectRight{ width:373px; margin:0; float:right;}
-.ContectRight p { color:#d9914a; margin:15px 0 5px 0;}
-.ContectRight .One .One_1{ background: url(images/1.jpg) no-repeat; width:13px; height:28px; float:left}
-.ContectRight .One .One_2{ background: url(images/11.jpg) no-repeat; width:360px; height:28px; float:right;}
-.ContectRight .One .One_2 .txt{ background:#f4d6b1; border:0; padding-top:7px; text-align:left;font-size:12px; font-family:Verdana, Arial, Helvetica, sans-serif; color:#7f3f1f;}
-.ContectRight .Two .Two_1{ background:url(images/2.jpg) no-repeat; width:373px; height:11px; margin-top:10px}
-.ContectRight .Two .Two_2{ background:url(images/22.jpg) no-repeat; width:373px; height:71px;}
-.ContectRight .Two .Two_2 .txt{ background:#f4d6b1;border:0; padding:0 0 5px 5px; text-align:left;font-size:12px;font-family:Verdana, Arial, Helvetica, sans-serif;color:#7f3f1f; overflow-y:hidden; height: 57px;}
-.ContectRight .submit{ float:right; margin-top:10px;}
+.content-right{ float:right; width:466px; margin:0px; padding-top:10px;}
+h1{ font-family:Myriad Pro, Verdana, Arial; font-size:34px; line-height:40px; color:#4f575b; margin:0; padding-bottom:30px; font-weight:lighter;}
+h2{ margin:0; padding-left:30px;padding-bottom:10px; font-family:Myriad Pro, Verdana, Arial; font-size:28px; font-weight:lighter; color:#5eb115; background:url(images/arrow.jpg) no-repeat 0 5px;}
+a{ color:#5eb115;}
+.feature1{ float:left;}
+.feature2{ float:right; padding-top:10px; padding-right:20px;}
+.heart{ background:url(images/heart.jpg) no-repeat 0 2px; padding-left: 30px; padding-bottom:20px; font-family: Arial, Verdana, Geneva, sans-serif; font-size:14px; line-height:20px; color:#4f575b;}
+.v{ background:url(images/v.jpg) no-repeat 0 2px; padding-left: 30px; padding-bottom:20px; font-family: Arial, Verdana, Geneva, sans-serif; font-size:14px; line-height:20px; color:#4f575b;}
+.yes{ background:url(images/yes.jpg) no-repeat 0 2px; padding-left: 30px; padding-bottom:30px; font-family: Arial, Verdana, Geneva, sans-serif; font-size:14px; line-height:20px; color:#4f575b;}
+.pic img { float:left; padding-right: 13px; padding-bottom:30px;}
+p{ font-family: Arial, Verdana, Geneva, sans-serif; font-size:14px; line-height:20px; color:#4f575b; margin:0; padding-bottom:20px;}
 
-#Foot{ width:815px; height:70px; padding:0 73px 0 72px; background: url(images/foot-bg.jpg) repeat-x; text-align:left; font-family:Verdana, Geneva, sans-serif;font-size:12px; color:#65341c; line-height:70px;}
+.foot{ height:30px; padding:20px 0 0 120px;}
+
